tests/base/parser/bad/lib/lmodule-library-cid-type-cid-with.scillib
scilla_version 0

library TestLib

(* 'equals' should be '=' *)

type House equals
| Kind of String
